--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 <body>
     <div class="container">
         <header>
-            <!-- <h1> D&D Dice Roller</h1> -->
-            <!-- <p>Roll your fate with stunning 3D animations</p> -->
         </header>
+
+        <div class="control-panel">
+            <h3>Zar Seç</h3>
+            <div class="dice-selector">
+                <label><input type="checkbox" class="dice-select" data-dice="d4"> D4</label>
+                <label><input type="checkbox" class="dice-select" data-dice="d6"> D6</label>
+                <label><input type="checkbox" class="dice-select" data-dice="d8"> D8</label>
+                <label><input type="checkbox" class="dice-select" data-dice="d10"> D10</label>
+                <label><input type="checkbox" class="dice-select" data-dice="d12"> D12</label>
+                <label><input type="checkbox" class="dice-select" data-dice="d20"> D20</label>
+            </div>
+            <button class="multi-roll-btn" id="multiRollBtn">Hepsini At</button>
+        </div>
 
         <div class="dice-grid">
             <div class="dice-card" data-dice="d4">
